--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>LC2PostsApp</title>
+	<title>LC2Search</title>
 	<link rel="stylesheet" href="styles/app.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -53,7 +53,7 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1>LC2PostsApp</h1>
+				<h1>LC2Search</h1>
 				<h3>LetzteChance.Org - Official Search Browser</h3>
 				<p>Supports:HTTPS,
 					<a href="#two" class="button scrolly">IMDB</a> and different Search APIs like Google Maps
@@ -264,7 +264,7 @@
 		<!-- Imprint -->
 		<section id="imprint" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1>News</h1>
+				<h1>Imprint</h1>
 				<div id="imprintresult">Loading...</div>
 			</div>
 		</section>
@@ -274,6 +274,8 @@
 		<!-- Scripts -->
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
+		<script src="./assets/js/jquery.min.js"></script>
 		<script>
 			window.$ = window.jQuery = require('./assets/js/jquery.min.js');
 		</script>
